# app/model/repo/author.go
@@ -1,4 +1,4 @@
-package model
+package repo
 
 import (
 	"github.com/google/uuid"
@@ -10,4 +10,6 @@ type Author struct {
 	CreatedAt time.Time `db:"created_at" json:"created_at"`
 	UpdatedAt time.Time `db:"updated_at" json:"updated_at"`
 	FullName  string    `db:"full_name" json:"full_name" validate:"required"`
+	UserName  string    `db:"username" json:"username" validate:"required"`
+	Password  string    `db:"password" json:"password" validate:"required"`
 }
